new proj/src/objects/Support_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>GE_Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ARC_Number__c</fullName>
        <label>ARC Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Approval_Flag__c</fullName>
        <formula>IMAGE( IF (   GE_Total_Reviews_Needed__c = 0 , &quot;&quot; , IF (GE_Total_Reviews_Needed__c =  GE_Total_Approvals__c  , &quot;/img/samples/flag_green.gif&quot;, IF (  GE_Total_Rejections__c &gt; 0 , &quot;/img/samples/flag_red.gif&quot;,  &quot;/img/samples/flag_yellow.gif&quot;))), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Business_Unit__c</fullName>
        <inlineHelpText>Select the appropriate business unit.</inlineHelpText>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Measurement and Control</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downhole Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RVI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sensing-FMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sensing-Druck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuter Stokes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F &amp; PT - Avon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F &amp; PT - Alexandria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F &amp; PT - Elk Grove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F &amp; PT - Salt Lake City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F &amp; PT - PNW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F &amp; PT- Bradford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F &amp; PT - Deer Park</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Business__c</fullName>
        <inlineHelpText>Select the type of business.</inlineHelpText>
        <label>Business</label>
        <picklist>
            <picklistValues>
                <fullName>Oil and Gas</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power and Water</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Buyer_Contracting_Officer_Name__c</fullName>
        <label>Buyer/Contracting Officer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_CBRDid_you_create_the_sales_order__c</fullName>
        <label>Did you create the sales order?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_CBR_Actions_Required_to_Correct__c</fullName>
        <inlineHelpText>Requestor to explain what steps will be taken to correct the order after it is cancelled by Finance, prior to being rebilled.</inlineHelpText>
        <label>Actions Required to Correct</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_CBR_Country_Name__c</fullName>
        <label>Country Name</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State Of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius And Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_CBR_Enter_Sales_Order_Number__c</fullName>
        <label>Sales Order Number</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_CBR_Invoice_Paid__c</fullName>
        <label>Has this invoice been paid?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_CBR_who_created_the_sales_order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cancel/Rebill Record Type</description>
        <inlineHelpText>Please select the name of the person that created the sales order</inlineHelpText>
        <label>If no, who created the sales order?</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Request8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_Cancellation_Document__c</fullName>
        <label>Cancellation Document #</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Case_ID__c</fullName>
        <inlineHelpText>Solicitation/Contract number. If none given give requester name followed by the date. No spaces. Example: HillAFB4/8/2006</inlineHelpText>
        <label>Case ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Comm_Ops_Clause_Comments__c</fullName>
        <label>Comm Ops Clause Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_Company_Customer_Name__c</fullName>
        <inlineHelpText>This generally comes from the &quot;Issued By&quot; box on standard form government contracts/solicitations - DO NOT use the name given in the &quot;Payment to be made by&quot; box.</inlineHelpText>
        <label>Company/Customer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Contact_Phone_Number__c</fullName>
        <label>Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_Contract_Value__c</fullName>
        <label>Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_Contracts_Clause_Comments__c</fullName>
        <label>Contracts Clause Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_Country_of_Origin__c</fullName>
        <inlineHelpText>Is this product manufactured in Billerica or Groby</inlineHelpText>
        <label>Country of Origin</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Custom_Invoice_Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Invoice Notification</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Request53DN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_Customer_Care_Clause_Comments__c</fullName>
        <label>Customer Care Clause Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_Customs_Invoice__c</fullName>
        <inlineHelpText>Is there a customs invoice?</inlineHelpText>
        <label>Customs Invoice?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Date_Received__c</fullName>
        <defaultValue>today()</defaultValue>
        <inlineHelpText>Date GEIT received the US Government T&amp;Cs</inlineHelpText>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_Describe_Requested_Changes__c</fullName>
        <inlineHelpText>Please state what field(s) need to be updated and the &quot;old&quot; value (New value will be entered below).</inlineHelpText>
        <label>Describe Requested Changes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_Description__c</fullName>
        <formula>&apos;This form will be used for Mod Revision Mismatch problems, Engineering Approvals, or miscellaneous requests for engineering assistance with an SAP roadblock.&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Due_Date_Flag__c</fullName>
        <formula>IMAGE( IF ( today() + 7 &lt; GE_Due_Date__c , &quot;/img/samples/flag_green.gif&quot;, IF ( GE_Due_Date__c &lt; today() , &quot;/img/samples/flag_red.gif&quot;, &quot;/img/samples/flag_yellow.gif&quot;)), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Due_Date__c</fullName>
        <inlineHelpText>Date GEIT must respond by</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_EHS_Clause_Comments__c</fullName>
        <label>EHS Clause Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_Final_Approval_Time__c</fullName>
        <label>Final Approval Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_Finance_Clause_Comments__c</fullName>
        <label>Finance Clause Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_Finance_Manager__c</fullName>
        <label>Finance Manager</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_Finance_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to user table for Finance Team Member selection

Cancel/Rebill Finance Team Member for Approval workflow</description>
        <label>Finance Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Request9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_Government_Contracts_Clause_Comments__c</fullName>
        <label>Government Contracts Clause Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_Human_Resources_Clause_Comments__c</fullName>
        <label>Human Resources Clause Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_IBS_Order__c</fullName>
        <description>Cancel/Rebill IBS Order</description>
        <inlineHelpText>Is this an IBS order?</inlineHelpText>
        <label>IBS Order?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Invoice_Currency_Code__c</fullName>
        <label>Invoice Currency Code</label>
        <picklist>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDF</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Invoice_Number__c</fullName>
        <label>Invoice #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Invoice_Tied_to_an_ARC__c</fullName>
        <inlineHelpText>Is the invoice tied to an ARC?</inlineHelpText>
        <label>Invoice tied to an ARC?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Is_this_an_ARRA_order_contract__c</fullName>
        <inlineHelpText>Check yes if this order/contract has any American Recovery and Reinvestment Act (ARRA) indicators.</inlineHelpText>
        <label>Is this an ARRA order/contract?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Is_this_an_ARRA_solicitation__c</fullName>
        <label>Is this an ARRA solicitation?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Legal_Clause_Comments__c</fullName>
        <label>Legal Clause Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_Mail_Cancell_Doc_to_Customer__c</fullName>
        <label>Mail cancellation document to customer?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Mail_New_Invoice_to_Customer__c</fullName>
        <label>Mail new invoice to customer?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Mailing_Instruction_Cancel_Doc__c</fullName>
        <label>Mailing Instructions Cancellation Doc</label>
        <picklist>
            <picklistValues>
                <fullName>Do not mail to the customer;Regular mail to customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL with tracking #</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail PDF to requestor - mail invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-mail PDF to requestor - do not mail invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Marketing_Clause_Comments__c</fullName>
        <label>Marketing Clause Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_Method_of_Payment__c</fullName>
        <label>Method of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_My_Cancel_Rebill__c</fullName>
        <description>Created for use in list views, to do a &quot;My&quot; list view for the assigned Finance user</description>
        <formula>IF ( GE_Finance_Team_Member__r.Username =  $User.Username , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Cancel Rebill</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Support Requests</relationshipLabel>
        <relationshipName>Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_Original_Invoice_Amount__c</fullName>
        <label>Original Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_Original_Invoice_Date__c</fullName>
        <inlineHelpText>Enter the date that the original invoice would have been due for payment.</inlineHelpText>
        <label>Original Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_Original_Payment_Due_Date__c</fullName>
        <label>Original Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_Original_Solicitation__c</fullName>
        <label>Original Solicitation #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Original_Submission_Time__c</fullName>
        <label>Original Submission Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_Original_Workflow__c</fullName>
        <label>Original Workflow #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Other_CancelRebil_onthis_SalesOr__c</fullName>
        <label>Other Cancel/Rebills on this Sales Order</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_P_L__c</fullName>
        <inlineHelpText>Please select P&amp;L.</inlineHelpText>
        <label>P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Bently Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidated-Alex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuter Stoke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement Solutions-Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS, MS, IT-India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection Technologies-Lewistown/RVI/Brazil/Huerth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NON US-Inspection Technologies;Advanced Sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow &amp; Process Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commtest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wayne-ITP Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wayne-Non-ITP Customers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Pending_with_Customer__c</fullName>
        <label>Pending with Customer?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Product_Service__c</fullName>
        <label>Product/Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Products_Services_to_be_Purchased__c</fullName>
        <label>Products/Services to be Purchased</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_Project_Leader_Clause_Comments__c</fullName>
        <label>Project Leader Clause Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_Quality_Clause_Comments__c</fullName>
        <label>Quality Clause Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_Quote__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Support Requests</relationshipLabel>
        <relationshipName>Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_Re_invoiced__c</fullName>
        <label>Re-invoiced</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Reason_Code__c</fullName>
        <label>Reason Code</label>
        <picklist>
            <picklistValues>
                <fullName>Incorrect Tax (excluding Europe VAT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Ship To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Sold to/Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Recon Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Sales Area/Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Payment Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Bill to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect PO#</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cancel Rebill</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_Resason_for_Others__c</fullName>
        <label>Reason for Others</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Revised_Invoice_Date__c</fullName>
        <label>Revised Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_Revised_Invoice_Number__c</fullName>
        <inlineHelpText>Enter the SAP invoice # that was created for this invoice request.</inlineHelpText>
        <label>Revised Invoice #</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_Revised_Payment_Due_Date__c</fullName>
        <label>Revised Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_Sales_Region__c</fullName>
        <inlineHelpText>Select the appropriate sales region.</inlineHelpText>
        <label>Business or Region</label>
        <picklist>
            <picklistValues>
                <fullName>BN Hardware/Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuter-Stokes O&amp;G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reuter-Stokes PG/RAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFT - 6400 Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFT - 6410 Aberdeen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFT - 1710 Calgary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFT - 1400 US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFT - 5400 Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe - Non-ARC, VAT, and Billing Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skaneateles (RVI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lewistown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alexandria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahrensburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huerth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Service_Clause_Comments__c</fullName>
        <label>Service Clause Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>